Bug 1590216 - Reset selection manager to focused element if its frame is recreated. r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D61371

--HG--
extra : moz-landing-system : lando